# grimoirelab

./: .gitignore  README.md  projects.json
default-grimoirelab-settings/: .projects.json.swp  credentials.cfg  identities.yml  projects.json  setup.cfg
