[general]
short_name = "RV Home"
update = true
min_update_delay = 60
debug = false
logs_dir = /home/bitergia/logs
aliases_file = /home/bitergia/conf/aliases.json

[projects]
projects_file = /home/bitergia/conf/projects.json

[es_collection]
url = http://elasticsearch:9200

[es_enrichment]
url = http://elasticsearch:9200
autorefresh = true

[sortinghat]
host = mariadb
user = root
password =
database = demo_sh
load_orgs = true
orgs_file = /home/bitergia/conf/organizations.json
autoprofile = [github, pipermail, git]
matching = [email]
sleep_for = 100
unaffiliated_group = Unknown
affiliate = true
strict_mapping = false
reset_on_load = false
identities_file = [/home/bitergia/conf/identities.yml]
identities_format = grimoirelab

[panels]
kibiter_time_from = now-5y
kibiter_default_index = git
kibiter_url = http://kibiter:5601
kibiter_version = 6.1.4-1
github-repos = true
github-issues = true

[phases]
collection = true
identities = true
enrichment = true
panels = true

#[bugzillarest]
#raw_index = bugzillarest_demo_raw
#enriched_index = bugzillarest_demo_enriched
#no-archive = true

#[confluence]
#no-archive = true
#raw_index = confluence_demo_raw
#enriched_index = confluence_demo_enriched

#[discourse]
#raw_index = discourse_demo_raw
#enriched_index = discourse_demo_enriched
#no-archive = true

[git]
api-token = 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
raw_index = git_demo_raw
enriched_index = git_demo_enriched
latest-items = true
studies = [enrich_demography:git, enrich_areas_of_code:git, enrich_onion:git]
category = commit

[github:repo]
raw_index = github_repo_chaoss
enriched_index = github_repo_enriched
api-token = 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
category = repository
no-archive = true

[github]
api-token = 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 
raw_index = github_demo_raw
sleep-for-rate = true
sleep-time = "300"
enriched_index = github_demo_enriched

[github:issues]
api-token = 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
raw_index = github_issues_demo_raw
enriched_index = github_issues_demo_enriched
no-archive = true
sleep-for-rate = true

[github:pull]
raw_index = github-pull_raw
enriched_index = github-pull_enriched
api-token = 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
category = pull_request
sleep-for-rate = true
no-archive = true
studies = [enrich_demography:github, enrich_areas_of_code:github]


[jira]
raw_index = jira_demo_raw
enriched_index = jira_demo_enriched
no-archive = true
backend-user = ***
backend-password = ***


#[slack]
#raw_index = slack_demo_raw
#enriched_index = slack_demo_enriched
#api-token = <YOUR_API_TOKEN_WHERE>
#no-archive = true


[enrich_demography:git]

[enrich_areas_of_code:git]
in_index = git_demo_raw
out_index = git-aoc_demo_enriched

[enrich_onion:git]
in_index = git
out_index = git-onion_demo_enriched
contribs_field = hash
